Revision history for HTML::Filter

          - Fixes multi rendering bug
          - Renamed JS files to sort after Form JS ones
          - Register scan with Util.Event
          - Prevent multiple invocations
          - Find filter by id not class
          - Main package POD update
          - Added Perl packages, JS, and LESS files

0.1.1     2024-06-09 16:15:19
          - Added project files to master branch
