@@ -400,6 +400,9 @@
         row-gap: 5px;
     }
 }
+.filter-label {
+    vertical-align: top;
+}
 .filter-resizer {
     background: #colours[filter-resizer-bg]; bottom: 0; cursor: row-resize;
     font-size: 1px; height: 6px; left: 0.25rem; position: absolute;
