@@ -1,5 +1,6 @@
 Revision history for HTML::Filter
 
+          - Changed event register method name in JS utils
           - Fixes multi rendering bug
           - Renamed JS files to sort after Form JS ones
           - Register scan with Util.Event
